--- a/app/src/main/res/layout/activity_body_part.xml
+++ b/app/src/main/res/layout/activity_body_part.xml
@@ -51,17 +51,23 @@
         android:layout_marginEnd="16dp"
         android:layout_below="@+id/cover"
         />
-    <Button
+
+
+
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:id="@+id/add_new_workout_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
-        android:text="Add New Workout"
-       android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"/>
-
-
-
+        android:layout_gravity="bottom|end"
+        android:layout_margin="30dp"
+        android:text="Add Workout"
+        app:icon="@drawable/baseline_addchart_24"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        app:backgroundTint="@color/blue"
+        android:textColor="@android:color/white"
+        app:iconTint="@android:color/white"
+        android:elevation="6dp"/>
 
 
 
