--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -172,6 +172,67 @@
 
             </RelativeLayout>
             <RelativeLayout
+                android:id="@+id/relLayoutBack"
+                android:layout_width="250dp"
+                android:layout_height="180dp"
+                android:layout_margin="8dp"
+                android:background="@drawable/rounded_gradient"
+                android:backgroundTintMode="src_atop"
+                android:clipToOutline="true"
+                android:padding="8dp">
+
+                <!-- Text at the top left -->
+                <TextView
+                    android:id="@+id/textViewBack"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    android:text="Back "
+                    android:textColor="@color/white"
+                    android:textSize="24sp"
+                    android:textStyle="bold" />
+
+                <!-- Circular Progress Bar just below the text -->
+                <ProgressBar
+                    android:id="@+id/progressBarBack"
+                    style="?android:attr/progressBarStyleHorizontal"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_below="@id/textViewBack"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    android:indeterminate="false"
+                    android:max="100"
+                    android:progress="75"
+                    android:progressDrawable="@drawable/circular_progress_drawable" />
+
+
+                <ImageView
+                    android:id="@+id/imageViewBack"
+                    android:layout_width="140dp"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginEnd="8dp"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/back" />
+
+                <!-- Gradient overlay -->
+                <View
+
+                    android:layout_width="140dp"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginEnd="8dp"
+                    android:background="@drawable/gradient_fade" />
+
+            </RelativeLayout>
+            <RelativeLayout
                 android:id="@+id/relLayoutTriceps"
                 android:layout_width="250dp"
                 android:layout_height="180dp"
